--- a/Programmania/Views/Home/ChallengeResult.cshtml
+++ b/Programmania/Views/Home/ChallengeResult.cshtml
@@ -2,81 +2,87 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="~/css/challengeResult.css">
-	<link rel="stylesheet" href="~/css/Footer.css" />
-	<link rel="stylesheet" href="~/css/util/zeroing.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="~/css/challengeResult.css">
+    <link rel="stylesheet" href="~/css/Footer.css" />
+    <link rel="stylesheet" href="~/css/util/zeroing.css" />
     <link rel="stylesheet" href="~/css/util/fonts.css" />
-	<title>Challenge Result</title>
+    <title>Challenge Result</title>
 </head>
 
 <body>
-	<div class="wrapper">
-		<header class="header">
-			<div class="header__content">
-				<div class="arrow-left"></div>
-				<div class="avatar__image">
-					<img src="~/images/avatarImg.png" alt="avatar">
-				</div>
-				<h3 class="username">John</h3>
-				<div class="item">
-					<h3 class="item__title">Course: </h3>
-					<p class="item__subtitle">C#</p>
-				</div>
-				<div class="item">
-					<h3 class="item__title">Discipline: </h3>
-					<p class="item__subtitle">Sockets</p>
-				</div>
-			</div>
-		</header>
+    <div class="wrapper">
+        <header class="header">
+            <div class="header__content">
+                <div class="arrow-left"></div>
+                <div class="avatar__image">
+                    <img src="~/images/avatarImg.png" alt="avatar">
+                </div>
+                <h3 class="username">John</h3>
+                <div class="item">
+                    <h3 class="item__title">Course: </h3>
+                    <p class="item__subtitle">C#</p>
+                </div>
+                @*<div class="item">
+                    <h3 class="item__title">Discipline: </h3>
+                    <p class="item__subtitle">Sockets</p>
+                </div>*@
+            </div>
+        </header>
 
-		<div class="main">
-			<div class="tiles">
-				<div class="col-1">
-					<div class="statistic-block block_answers">
-						<h3 class="statistic-block__title">Correct answers: </h3>
-						<h5 class="statistic-block__text">6 / 10</h5>
-					</div>
+        <div class="main">
+            <div class="tiles">
+                <div class="col-1">
+                    <div class="statistic-block block_answers">
+                        <h3 class="statistic-block__title">Correct answers: </h3>
+                        <h5 class="statistic-block__text">6 / 10</h5>
+                    </div>
 
-					<div class="statistic-block block_course">
-						<h3 class="statistic-block__title">Course: </h3>
-						<h5 class="statistic-block__text">C#</h5>
-					</div>
+                    <div class="statistic-block block_course">
+                        <h3 class="statistic-block__title">Course: </h3>
+                        <h5 class="statistic-block__text">C#</h5>
+                    </div>
 
-					<div class="statistic-block block_discipline">
-						<h3 class="statistic-block__title">Discipline: </h3>
-						<h5 class="statistic-block__text">Sockets</h5>
-					</div>
-				</div>
+                    @*<div class="statistic-block block_discipline">
+                        <h3 class="statistic-block__title">Discipline: </h3>
+                        <h5 class="statistic-block__text">Sockets</h5>
+                    </div>*@
+                </div>
 
-				<div class="col-2">
-					<div class="statistic-block block_lose">
-						<h3 class="statistic-block__title">Better luck next time!</h3>
-						<h5 class="statistic-block__text">You lose the competition</h5>
-					</div>
-					<!-- <div class="statistic-block block_win">
-						<h3 class="statistic-block__title">Congratulations!</h3>
-						<h5 class="statistic-block__text">You won the competition</h5>
-					</div> -->
+                <div class="col-2">
+                    <div id="win-block" class="statistic-block block_lose">
+                        <h3 class="statistic-block__title">Better luck next time!</h3>
+                        <h5 class="statistic-block__text">You lose the competition</h5>
+                    </div>
 
-					<div class="btn btn__back">
-						<div class="front">
-							Back to main
-						</div>
+                    <div id="lose-block" class="statistic-block block_win">
+                        <h3 class="statistic-block__title">Congratulations!</h3>
+                        <h5 class="statistic-block__text">You won the competition</h5>
+                    </div>
 
-						<div class="back">
-							<img src="~/images/arrow-back.png" alt="back arrow">
-						</div>
-					</div>
+                    <div id="wait-block" class="statistic-block block_wait">
+                        <h3 class="statistic-block__title">Nice!</h3>
+                        <h5 class="statistic-block__text">Wait until your opponent answers the questions</h5>
+                    </div>
+
+                    <div class="btn btn__back">
+                        <div class="front">
+                            Back to main
+                        </div>
+
+                        <div class="back">
+                            <img src="~/images/arrow-back.png" alt="back arrow">
+                        </div>
+                    </div>
 
 
-				</div>
-			</div>
-		</div>
+                </div>
+            </div>
+        </div>
 
-		<footer class="footer">
+        <footer class="footer">
             <div class="footer-links" data-aos="zoom-in" data-aos-duration="700">
                 <a href="#" class="footer-links_first">
                     <div class="footer-link__image">
@@ -100,8 +106,8 @@
             <div class="footer__text" data-aos="zoom-in" data-aos-duration="700">
                 <h5>&#x24B8; 2021 Programmania. All rights reserved.</h5>
             </div>
-    </footer>
-	</div>
+        </footer>
+    </div>
 </body>
 
 </html>
