--- a/Programmania/wwwroot/css/challengeResult.css
+++ b/Programmania/wwwroot/css/challengeResult.css
@@ -115,14 +115,14 @@
 
 .statistic-block__title {
     text-align: center;
-    font-size: 1.8em;
+    font-size: 2.5em;
     font-family: monsterrat-light;
 }
 
 .statistic-block__text {
     text-align: center;
     margin-top: 20px;
-    font-size: 2.2em;
+    font-size: 2.0em;
     font-family: monsterrat-bold;
 }
 
@@ -142,7 +142,8 @@
 }
 
 .block_win,
-.block_lose {
+.block_lose,
+.block_wait {
     width: 100%;
     min-height: 200px;
     margin-top: 100px;
@@ -150,7 +151,6 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    font-size: 2em;
 }
 
 .block_win {
@@ -161,6 +161,11 @@
 .block_lose {
     background-color: #ff8c8c;
     color: #660101;
+}
+
+.block_wait {
+    background-color: darkslateblue;
+    color: burlywood;
 }
 
 .btn {
