working with admin

--- a/Programmania/Views/Home/Admin.cshtml
+++ b/Programmania/Views/Home/Admin.cshtml
@@ -55,10 +55,10 @@
         <form>
             <label>Select course to update</label>
             <input list="brow">
-            <datalist id="brow">
-                <option data-id="1" value="aaa">
-                <option data-id="2" value="bbb">
-            </datalist>
+            <select id="brow">
+                <option value="1">aaa</option>
+                <option value="2">bbb</option>
+            </select>
 
             <label>Name</label>
             <input type="text" />
